--- a/public_html/register.html
+++ b/public_html/register.html
@@ -7,7 +7,7 @@
         <link href="./css/bootstrap.css" rel="stylesheet" />
         <link href="./css/styles.css" rel="stylesheet" />
     </head>
-    <body class="d-flex flex-column">
+    <body class="d-flex flex-column min-vh-100">
         <!-- Including bootsrap javascript -->
         <script src="./js/bootstrap.bundle.js" crossorigin="anonymous"></script>
         <!-- navbar -->
@@ -56,9 +56,7 @@
                                         Login
                                     </button>
                                 </a>
-                                <a href="./register.html">
-                                    <button
-                                        class="btn btn-outline-success me-2"
+                                <a href="./register.html"> <button class="btn btn-outline-success me-2"
                                         type="button"
                                     >
                                         Register
@@ -68,44 +66,44 @@
                     </div>
                 </nav>
 
-        <footer class="bg-body-tertiary text-center text-lg-start">
-            <div
-                class="text-center p-3 fixed-bottom"
-                style="background-color: rgba(0, 0, 0, 0.05)"
-            >
-                © 2024 Copyright: Roberto Pio Iannello e Luca Carossino
-            </div>
-        </footer>
-        
+
+
         <!--page content -->
-        <div class="container-fluid">
-        
-            <h1>Registrati</h1>
-            <form action="registration.php" method="post">
-                <div class="mb-3">
-                    <label for="firstname" class="form-label">Nome</label>
-                    <input type="text" class="form-control" name="firstname">
-                </div>
-                <div class="mb-3">
-                    <label for="lastname" class="form-label">Cognome</label>
-                    <input type="text" class="form-control" name="lastname">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                    <label for="pass" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="pass">
-                </div>
-                <div class="mb-3">
-                    <label for="confirm" class="form-label">Conferma Password</label>
-                    <input type="password" class="form-control" name="confirm">
-                </div>
-                    <button type="submit" class="btn btn-primary" name="submit" value="...A VOSTRA SCELTA...">Registrati</button>
-            </form>
+        <div class="container">
+            <div class="row justify-content-center">
+                <h1>Registrati</h1>
+                <form action="registration.php" method="post">
+                    <div class="mb-3">
+                        <label for="firstname" class="form-label">Nome</label>
+                        <input type="text" class="form-control" name="firstname">
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastname" class="form-label">Cognome</label>
+                        <input type="text" class="form-control" name="lastname">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="pass" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="pass">
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirm" class="form-label">Conferma Password</label>
+                        <input type="password" class="form-control" name="confirm">
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-primary" name="submit" value="...A VOSTRA SCELTA...">Registrati</button>
+                    </div>
+                </form>
+            </div>
         </div>
 
-
+        <footer class="mt-auto bg-dark text-white text-center">
+                   <div class="container">
+                    <p class="text-align-center">&COPY; 2024 Copyright: Roberto Pio Iannello e Luca Carossino</p>
+                   </div>
+        </footer>
     </body>
 </html>
